[package]
name = "createdoc"
version = "0.1.8"
authors = ["@shsy"]
edition = "2021"
description = "Document Generation Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = "3.2.15"
regex = "1.5.6"
serde = "1.0.137"
serde_derive = "1.0.137"
toml = "0.5.9"

[profile.release]
lto = "thin"
